--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,14 +28,26 @@
     height: 1.25rem;
 }
 
-@media (min-width: 576px) {}
+.recovery-codes {
+    list-style: none;
+}
+
+.recovery-codes li {
+    font-size: 1.25rem;
+    font-family: monospace;
+}
+
+.recovery-codes li::before {
+    content: "\2022";
+    color: rgba(0, 0, 0, .25);
+    font-weight: bold;
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
+}
 
 @media (min-width: 768px) {
     .laravel-logo {
         height: 5rem;
     }
 }
-
-@media (min-width: 992px) {}
-
-@media (min-width: 1200px) {}
