Se implementó AJAX, se mejoró las vistas blade y se agregó traducción en español

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -51,3 +51,74 @@
         height: 5rem;
     }
 }
+
+.small-profile-photo,
+.profile-photo {
+    border: 2px solid var(--secondary);
+    overflow: hidden;
+}
+
+.profile-photo {
+    height: 64px;
+    width: 64px;
+}
+
+.small-profile-photo {
+    height: 48px;
+    width: 48px;
+}
+
+.small-profile-photo img,
+.profile-photo img {
+    width: 100%;
+    height: 100%;
+    object-position: 50% 50%;
+    object-fit: cover;
+}
+
+.sesion-list {
+    list-style: none;
+    padding-left: 0;
+}
+
+.sesion-list li {
+    display: flex;
+    align-items: center;
+}
+
+.sesion-list li:not(:last-child) {
+    margin-bottom: 0.5rem;
+}
+
+.session-icon {
+    flex-grow: 0;
+    margin-right: 0.5rem;
+    display: flex;
+    width: 2rem;
+}
+
+.session-icon svg {
+    display: block;
+    height: 24px;
+    color: var(--secondary);
+}
+
+.session-info {
+    flex-grow: 1;
+}
+
+.session-info span {
+    display: block;
+    font-weight: bold;
+    flex-grow: 1;
+}
+
+.session-info small {
+    display: block;
+    font-size: 0.75rem;
+    color: var(--secondary);
+}
+
+.custom-toastify{
+    max-width: 250px!important;
+}
